     (see #2678)
   * properly take into account native system byteorder, should fix reading
     rt130 data on big endian systems (see #2678)
 - obspy.io.xseed:
   * fix a bug reading SEED blockettes 48 and 58 which was likely never
     encountered (see #2668)
 - obspy.clients.fdsn:
   * introduce fine-grained FDSN client exceptions (see #2653)

maintenance_1.2.x
=================

Changes:
 - obspy.core:
   * Inventory addition now consistently uses shallow copies (#2675, #2694)

1.2.2 (doi: 10.5281/zenodo.3921997)
===================================

Changes:
 - obspy.core:
   * Fix wrong values in Stats object after deepcopy or pickle of Stats object
     for edge cases (see #2601)
 - obspy.clients.fdsn:
   * EIDA routing client: fix an issue that leaded to a request of *all* EIDA
     data when requesting an invalid, out-of-epochs time window for a valid
     station (see #2611)
   * update RASPISHAKE URL mapping to use https
   * fix a bug of not handling HTTPException in mass_downloader (see #2606)
   * use the client's set timeout in service discovery, too (see #2656)
   * add URL mapping for FDSNWS at UIB-NORSAR (see #2659)
 - obspy.clients.filesystem:
   * sds: continue get_all_stations() even if encountering an invalid channel
     code (see #2636)
 - obspy.clients.neic:
   * Make client socket blocking (see #2617)
 - obspy.io.hypodd:
   * Allow 60.0 seconds in the second field of origin times, allow NaN in
     the magnitude field for pha format (see #2627)
 - obspy.io.nordic:
   * Fixed a bug raising an exception when reading a nordic file with a non
     positive-definite covariance matrix (see #2593)
 - obspy.io.seiscomp:
   * Fixed an issue where a response has zero zeros or poles (see #2633)

1.2.1 (doi: 10.5281/zenodo.3706479)
===================================

Changes:
 - fix an installation issue with pip and setuptools version 46 (see #2578)
 - fix response plots when providing `axes=...` with a numpy array of Axes
   instances (see #2579)
